--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <html>
 	<head>
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 		<title>Shelagh Cully</title>
-    </head>
+    <link href="css/css.css" rel="stylesheet" type="text/css">
+	</head>
     <body>
-    		<h1><img src="images/logosmall.png">
+    		<h1><img src="images/logosmall.png"> Artwork by Shelagh Cully
         	</h1>
-        	<h2> 
-         		<p><img src="images/budgie.jpg"></p>
-            </h2>
+            <p><img src="images/budgie.jpg"></p>
             	<p> My name is Shelagh Cully. I am an illustration major at Towson University and will be graduating in Fall 2015. I currently intern at the Smithsonian's Digital Learning Center creating concept illustrations. I hope to sell my own art work exhibit the world.</p> 
-        	<h3>
+        	<h2>
         	<a href="http://www.dreamingwithjeff.com/"> Dreaming With Jeff</a>	
-        	</h3>
+        	</h2>
         		<img src="images/jeffbridgesscreen.png">
         		<p>Did you check out this site when the commercial aired during the Super Bowl? If not you really missed out. This site has a lot of really interesting interactive qualities that I haven't seen on other web pages. This particular example shows a record that folds out from behind two seperate images after you stop scrolling. 
                 </p>
-    </body>
+            <h2>
+            <a href="http://shelaghcully.tumblr.com/"> Shelagh Cully's Tumblr </a>
+            </h2>
+             	<img src="images/tumblrscreencap.png">
+                <p>Tumblr is one of the most interesting web platforms available. There is so much diversity and creativity, every tumblr page is uniquely different with its content and overall appearance.</p>
+             
+</body>
 </html>
